# petrilya-core

./: .gitignore  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: CNAME  blobs.js  dish-stage.js  download-button.js  index.html  pause-on-hidden.js  robots.txt  rotator.js  sitemap.xml  steps-carousel.js  sticky-nav.js  style.css  theme.js
docs/ru/: index.html
petrilya/: __init__.py  cli.py
petrilya/_tools/: screenshots.py
petrilya/export/: csv_writer.py  json_manifest.py  pdf_report.py
petrilya/inference/: engine.py
petrilya/metrics/: colony.py
petrilya/ui/: __init__.py  app.py  icons.py  image_view.py  main_window.py  mock_engine.py  style.qss  theme.py  toast.py  worker.py
scripts/: benchmark.py  build_windows.py  debug_engine.py  generate_hero.py  generate_screenshot.py  petrilya.spec
tests/: test_inference.py
тест папки/: 11764.csv  11764.manifest.json  11764.masks.npz  4826.csv  4826.manifest.json  4826.masks.npz  5207.csv  5207.manifest.json  5207.masks.npz  summary.csv
