[project]
name = "petrilya"
version = "0.0.1"
description = "AI colony counter for biology labs"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { file = "LICENSE" }
authors = [{ name = "Ilya", email = "you@petrilya.com" }]

dependencies = [
    "numpy>=1.26,<2.0",
    "Pillow>=10.0",
    "opencv-python-headless>=4.9",
    "scikit-image>=0.22",
    "tifffile>=2024.1",
    "onnxruntime>=1.17",
    "cellpose>=3.0,<4.0",
    "click>=8.1",
    "rich>=13.7",
]

[project.optional-dependencies]
gpu = ["onnxruntime-gpu>=1.17"]
dev = ["pytest>=7.4", "black>=24.1", "ruff>=0.2"]

[project.scripts]
petrilya = "petrilya.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["petrilya*"]
