[project]
name = "petrilya"
version = "0.0.1"
description = "AI colony counter for biology labs — drag, count, export."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { file = "LICENSE" }
authors = [{ name = "Ilya Rogozhin", email = "iliarogogvykh@gmail.com" }]
keywords = [
    "microbiology",
    "colony-counter",
    "petri-dish",
    "cellpose",
    "bioimage-analysis",
    "image-segmentation",
    "microscopy",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: X11 Applications :: Qt",
    "Environment :: Win32 (MS Windows)",
    "Environment :: MacOS X",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "numpy>=1.26,<2.0",
    "Pillow>=10.0",
    "opencv-python-headless>=4.9",
    "scikit-image>=0.22",
    "tifffile>=2024.1",
    "onnxruntime>=1.17",
    "cellpose>=3.0,<4.0",
    "click>=8.1",
    "rich>=13.7",
    "PySide6>=6.6",
    "reportlab>=4.0",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
gpu = ["onnxruntime-gpu>=1.17"]
dev = ["pytest>=7.4", "black>=24.1", "ruff>=0.2", "build>=1.0", "twine>=5.0"]

[project.urls]
Homepage = "https://petrilya.com"
Source = "https://github.com/petrilya-app/petrilya-core"
Issues = "https://github.com/petrilya-app/petrilya-core/issues"
"Release notes" = "https://github.com/petrilya-app/petrilya-core/releases"

[project.scripts]
petrilya = "petrilya.cli:main"
petrilya-ui = "petrilya.ui.app:main"
petrilya-screenshots = "petrilya._tools.screenshots:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["petrilya*"]
